// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDetailsActions.updateProjectNameIfNecessaryAndDoPrompting() does not rename project if new project name is different than spec and we have duplicate 1`] = `Array []`;

exports[`ProjectDetailsActions.updateProjectNameIfNecessaryAndDoPrompting() does nothing if project name is valid 1`] = `Array []`;

exports[`ProjectDetailsActions.updateProjectNameIfNecessaryAndDoPrompting() does nothing if projectSaveLocation is not set 1`] = `Array []`;

exports[`ProjectDetailsActions.updateProjectNameIfNecessaryAndDoPrompting() renames project if lang_id changed 1`] = `
Array [
  Object {
    "pathLocation": "am_ult_eph_book",
    "type": "SET_SAVE_PATH_LOCATION",
  },
  Object {
    "alertMessage": "projects.renamed_project",
    "button1Text": "buttons.ok_button",
    "button2Text": undefined,
    "buttonLinkText": null,
    "callback": [Function],
    "callback2": null,
    "type": "OPEN_OPTION_DIALOG",
  },
]
`;

exports[`ProjectDetailsActions.updateProjectNameIfNecessaryAndDoPrompting() renames project if new project name is different than spec 1`] = `
Array [
  Object {
    "pathLocation": "fr_ult_eph_book",
    "type": "SET_SAVE_PATH_LOCATION",
  },
  Object {
    "alertMessage": "projects.renamed_project",
    "button1Text": "buttons.ok_button",
    "button2Text": undefined,
    "buttonLinkText": null,
    "callback": [Function],
    "callback2": null,
    "type": "OPEN_OPTION_DIALOG",
  },
]
`;

exports[`ProjectDetailsActions.updateProjectNameIfNecessaryAndDoPrompting() renames project if project id changed 1`] = `
Array [
  Object {
    "pathLocation": "fr_ult_tit_book",
    "type": "SET_SAVE_PATH_LOCATION",
  },
  Object {
    "alertMessage": "projects.renamed_project",
    "button1Text": "buttons.ok_button",
    "button2Text": undefined,
    "buttonLinkText": null,
    "callback": [Function],
    "callback2": null,
    "type": "OPEN_OPTION_DIALOG",
  },
]
`;

exports[`ProjectDetailsActions.updateProjectNameIfNecessaryAndDoPrompting() renames project if resource.id (resourceId) changed 1`] = `
Array [
  Object {
    "pathLocation": "fr_lib_eph_book",
    "type": "SET_SAVE_PATH_LOCATION",
  },
  Object {
    "alertMessage": "projects.renamed_project",
    "button1Text": "buttons.ok_button",
    "button2Text": undefined,
    "buttonLinkText": null,
    "callback": [Function],
    "callback2": null,
    "type": "OPEN_OPTION_DIALOG",
  },
]
`;
